# create-vue-rust

./: Cargo.toml
examples/: banner.rs  dialoguer.rs
src/: args.rs  banner.rs  create_eslint_config.rs  editor_config.rs  eslint.rs  main.rs  prompts.rs  render.rs  render_eslint.rs  utils.rs
src/estlint_utils/: airbnb.yml
src/template/base/: package.json
test/: package.json
