[package]
name = "create-vue-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
colorful = "0.2.1"
console = "0.15.2"
dialoguer = "0.10.2"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["preserve_order"] }
